@@ -1,3 +1,7 @@
+2003-11-19  pkhincha <pkhincha@aol.com>
+        * maxinput to throttle the # of bytes
+        * on request.  
+
 2003-11-03  pkhincha <pkhincha@aol.com>
 
 	* nsd/urlspace.c: removed initing of mutex
